I18N-2193 Skip check failures whose PR review threads are resolved Skip check failures whose PR review threads are resolved